tests(): add specs for growl notifications

--- a/app/assets/javascripts/activeadmin_jobs/growl_setup.js.erb
+++ b/app/assets/javascripts/activeadmin_jobs/growl_setup.js.erb
@@ -11,12 +11,12 @@ JobNotifier.onNotify = function(result) {
     finished: {
       title: 'Completed Job',
       one: '1 job was successfully completed!',
-      other: 'jobs where successfully completed!'
+      other: 'jobs were successfully completed!'
     },
     failed: {
       title: 'Failed Job',
       one: '1 job was completed, but it contains errors...',
-      other: 'jobs where completed, but they contains errors...'
+      other: 'jobs were completed, but they contains errors...'
     }
   };
 
