feat(locales): improve job messages

--- a/app/assets/javascripts/activeadmin_jobs/growl_setup.js.erb
+++ b/app/assets/javascripts/activeadmin_jobs/growl_setup.js.erb
@@ -1,5 +1,6 @@
 JobNotifier.translations = <%= I18nDictionary.translations.to_json %>;
 JobNotifier.jobsUrl = "<%= AdminHelpers.jobs_url %>";
+console.info('translations', JobNotifier.translations);
 
 JobNotifier.onNotify = function(result) {
   DEFAULT_MESSAGES = {
