feat(): improve error view

--- a/spec/dummy/app/views/admin/jobs/_user_upload_job.failed.html.erb
+++ b/spec/dummy/app/views/admin/jobs/_user_upload_job.failed.html.erb
@@ -1,1 +1,10 @@
-<%= result.to_s %>
+<h2>Errors :(</h2>
+
+<% result.each do |record| %>
+  <h3>Row #<%= record[:row] %>:</h3>
+  <ul>
+    <% record[:errors].each do |error| %>
+      <li><%= error %></li>
+    <% end %>
+  </ul>
+<% end %>
